--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 4000
-MONGODB_URL = mongodb://localhost:27017/jobPortalDB
+MONGODB_URL = "mongodb+srv://rajvardhant563:LqiFS8i6SUuT4gWK@cluster0.bv5cc3v.mongodb.net/JobPortalDB"
